@@ -1,3 +1,8 @@
+2008-01-31  Michael Natterer  <mitch@imendio.com>
+
+	* glib/gmem.c: use %G_GSIZE_FORMAT instead of %lu since sizes have
+	changed from gulong to gsize in this file.
+
 2008-01-30  Johan Dahlin  <johan@gnome.org>
 
 	* configure.in: Remove oc since oc.po is gone.
